# fGPT

./: .gitignore  Dockerfile  Makefile  README.md  app.py  constants.py  dask_pipeline.py  data_pipeline.py  data_prep.py  inference.py  main.py  model.py  pyproject.toml  requirements-data.txt  requirements-dev.txt  requirements.txt  scratch_huggingface.py  test_data_pipeline.py  test_data_prep.py  test_model.py  test_token.py  tokenizer.py  training.py
data/: data.txt  data_prep_1.txt  data_prep_2.txt  data_train.txt  data_validation.txt  token_1.txt  token_2.txt
src/fgpt/: __main__.py  data.py  foo.py  model.py  training.py  utils.py
tests/: test_foo.py
