[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fgpt"
version = "0.0.1"
description = "A language model trained form scratch"
readme = "README.md"
authors = [{ name = "Felix Jobson", email = "felix.jobson@outlook.de" }]
license = { file = "LICENSE" }
dynamic = ["dependencies"]
requires-python = ">=3.9"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[project.scripts]
fgpt = "fgpt.__main__:main"
